--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,6 @@ ruff==0.0.284
 #SQL formatter
 prettytable
 #For this project specifically
-Flask
+Flask==1.1.2
+transformers==4.5.1
 gunicorn
-transformers
