--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,18 @@
-#List of Packages needed
-#  Data Science Packages
-
-jupyter
-pandas
-polars
-numpy
-scikit-learn
-matplotlib
-seaborn
-
-#  Others - for the Github Workflows
+#Devops
 black
-click 
-pylint
+black_nbconvert
 pytest
-#rust based linter
-ruff==0.0.284
-#SQL formatter
-prettytable
-#For this project specifically
-Flask
-transformers
+pytest-cov
+pytest-playwright
+ruff
+nbval
+nbqa
+
+#Project
+fastapi==0.85.0
+uvicorn==0.18.3
+#others
+Flask==2.0.2
+Werkzeug==2.2.2
+python-dotenv
+requests
